--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <script>
     // Ganti URL dengan lokasi file JSON kamu
-    fetch('path/to/episode.json')
+    fetch('episode.json')
         .then(response => response.json())
         .then(episodes => {
             const episodeList = document.getElementById('episode-list');
