--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 const listItem = document.createElement('li');
                 listItem.innerHTML = `
                     ${episode.title} 
-                    <button onclick="window.open('https://krdl.moe/download/${episode.title}/${episode.id}/mp4')">Open</button>
+                    <button onclick="window.open('https://krdl.moe/download/${episode.title}/mp4')">Open</button>
                 `;
                 episodeList.appendChild(listItem);
             });
