--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 </ul>
 
 <button onclick="window.open('https://krdl.moe/register')">Register</button>
+<button onclick="window.open('https://krdl.moe/login')">Login</button>
 
 <script>
     // Ganti URL dengan lokasi file JSON kamu
